--- a/project/.streamlit/config.toml
+++ b/project/.streamlit/config.toml
@@ -1,7 +1,11 @@
 
 [theme]
 base="light"
-
+primaryColor = "#808080"
+backgroundColor = "#FFFFFF"
+secondaryBackgroundColor = "#D3D3D3"
+textColor = "#333335"
+font = "sans serif"
 
 [layout]
 wide = true
